force-app/main/default/objects/Electra_Config__c/Electra_Config__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Electra Config</label>
</CustomObject>