force-app/main/default/objects/Electra_Config__c/fields/SF_Client_ID__c.field-meta.xml
<CustomField>
    <fullName>SF_Client_ID__c</fullName>
    <label>SF Client ID</label>
    <length>200</length>
    <type>Text</type>
</CustomField>