force-app/main/default/objects/Electra_Config__c/fields/SF_Client_Secret__c.field-meta.xml
<CustomField>
    <fullName>SF_Client_Secret__c</fullName>
    <label>SF Client Secret</label>
    <length>200</length>
    <type>Text</type>
</CustomField>