force-app/main/default/objects/Electra_Config__c/fields/SF_Org_Domain__c.field-meta.xml
<CustomField>
    <fullName>SF_Org_Domain__c</fullName>
    <label>SF Org Domain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>