force-app/main/default/objects/Electra_Config__c/fields/Twilio_Account_SID__c.field-meta.xml
<CustomField>
    <fullName>Twilio_Account_SID__c</fullName>
    <label>Twilio Account SID</label>
    <length>64</length>
    <type>Text</type>
</CustomField>