force-app/main/default/objects/Electra_Config__c/fields/Twilio_From_Number__c.field-meta.xml
<CustomField>
    <fullName>Twilio_From_Number__c</fullName>
    <label>Twilio From Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>